k8s/02-db.yaml
# k8s/02-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gix-db
spec:
  serviceName: "gix-db"
  replicas: 1
  selector:
    matchLabels:
      app: gix-db
  template:
    metadata:
      labels:
        app: gix-db
    spec:
      automountServiceAccountToken: false
      containers:
        - name: timescale
          image: timescale/timescaledb:latest-pg16
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 15m
              memory: 192Mi
              ephemeral-storage: 512Mi
            limits:
              memory: 512Mi
              ephemeral-storage: 1Gi
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: gix-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: gix-db
  clusterIP: None
