k8s/03-redis.yaml
# k8s/03-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gix-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gix-redis
  template:
    metadata:
      labels:
        app: gix-redis
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server"]
          args: ["--maxmemory", "200mb", "--maxmemory-policy", "allkeys-lru"]
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
              ephemeral-storage: 128Mi
            limits:
              memory: 256Mi
              ephemeral-storage: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: gix-redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: gix-redis
