k8s/04-backend.yaml
# k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gix-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gix-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gix-backend
        app.kubernetes.io/component: api
        focus.finops.org/Environment: production
        focus.finops.org/Application: gix
        app: gix-backend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: gix-backend
          image: niutaq/gix-backend:v1.2.8
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
            - containerPort: 8081
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 100m
              memory: 512Mi
              ephemeral-storage: 1Gi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: gix-backend-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - name: drpc
      port: 8081
      targetPort: 8081
      nodePort: 30081
  selector:
    app: gix-backend
